Commented out code that caused an exception.
git-svn-id: http://chianti.ucsd.edu/svn@21131 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/io-impl/trunk/pom.xml
+++ b/core3/io-impl/trunk/pom.xml
@@ -78,7 +78,8 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
+<!--			<version>${junit.version}</version> -->
+			<version>4.4</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
