--- a/core3/parent/trunk/pom.xml
+++ b/core3/parent/trunk/pom.xml
@@ -1,5 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>parent</artifactId>
@@ -18,6 +19,9 @@
 		<spring.version>2.5.6</spring.version>
 		<spring.osgi.version>1.2.0</spring.osgi.version>
 		<junit.version>4.8.1</junit.version>
+		<easymock.version>2.5.2</easymock.version>
+		
+		<maven-bundle-plugin.version>2.1.0</maven-bundle-plugin.version>
 	</properties>
 
 	<distributionManagement>
