--- a/core3/viewmodel-api/trunk/pom.xml
+++ b/core3/viewmodel-api/trunk/pom.xml
@@ -28,10 +28,8 @@
 			<resource>
 				<directory>src/main/resources</directory>
 			</resource>
-			<!--
-				| example additional resource entries, useful when building Eclipse
-				RCP applications
-			-->
+			<!-- | example additional resource entries, useful when building Eclipse 
+				RCP applications -->
 		</resources>
 		<plugins>
 			<plugin>
@@ -56,34 +54,26 @@
 				<groupId>org.ops4j</groupId>
 				<artifactId>maven-pax-plugin</artifactId>
 				<version>1.4</version>
-				<!--
-					| enable improved OSGi compilation support for the bundle
-					life-cycle. | to switch back to the standard bundle life-cycle,
-					move this setting | down to the maven-bundle-plugin section
-				-->
+				<!-- | enable improved OSGi compilation support for the bundle life-cycle. 
+					| to switch back to the standard bundle life-cycle, move this setting | down 
+					to the maven-bundle-plugin section -->
 				<extensions>true</extensions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>1.4.3</version>
-				<!--
-					| the following instructions build a simple set of public/private
-					classes into an OSGi bundle
-				-->
+				<version>${maven-bundle-plugin.version}</version>
+				<!-- | the following instructions build a simple set of public/private 
+					classes into an OSGi bundle -->
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
 						<Bundle-Version>${pom.version}</Bundle-Version>
-						<!--
-							| assume public classes are in the top package, and private
-							classes are under ".internal"
-						-->
+						<!-- | assume public classes are in the top package, and private classes 
+							are under ".internal" -->
 						<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
 						<Private-Package>${bundle.namespace}.internal.*</Private-Package>
-						<!--
-							| each module can override these defaults in their osgi.bnd file
-						-->
+						<!-- | each module can override these defaults in their osgi.bnd file -->
 						<_include>-osgi.bnd</_include>
 					</instructions>
 				</configuration>
@@ -92,9 +82,7 @@
 	</build>
 
 	<repositories>
-		<!--
-			bootstrap for cytoscape dependencies, namely the parent POM snapshots
-		-->
+		<!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
 		<repository>
 			<id>cytoscape_snapshots</id>
 			<snapshots>
@@ -106,9 +94,7 @@
 			<name>Cytoscape Snapshots</name>
 			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
 		</repository>
-		<!--
-			bootstrap for cytoscape dependencies, namely the parent POM releases
-		-->
+		<!-- bootstrap for cytoscape dependencies, namely the parent POM releases -->
 		<repository>
 			<id>cytoscape_releases</id>
 			<snapshots>
@@ -139,18 +125,18 @@
 		</dependency>
 
 		<!-- unit tests -->
-        <dependency>
-            <groupId>org.easymock</groupId>
-            <artifactId>com.springsource.org.easymock</artifactId>
-            <version>2.3.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.4</version>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>com.springsource.org.easymock</artifactId>
+			<version>${easymock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 </project>
