Method name changed in viewmodel-api, and implementations refactored accordingly.
git-svn-id: http://chianti.ucsd.edu/svn@21159 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/presentation-api/trunk/pom.xml
+++ b/core3/presentation-api/trunk/pom.xml
@@ -56,7 +56,7 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>1.4.3</version>
+				<version>${maven-bundle-plugin.version}</version>
 				<!--
 					| the following instructions build a simple set of public/private
 					classes into an OSGi bundle
