--- a/coreplugins/trunk/pom.xml
+++ b/coreplugins/trunk/pom.xml
@@ -62,7 +62,7 @@
           <version>2.2-beta-5</version>
           <configuration>
             <descriptorRefs>
-              <descriptorRef>project</descriptorRef>
+              <descriptorRef>jar-with-dependencies</descriptorRef>
             </descriptorRefs>
           </configuration>
           <executions>
@@ -78,6 +78,49 @@
       </plugins>
     </pluginManagement>
   </build>
+
+  <!-- 
+       Don't add additional repositories!  
+       We want everything coming from either Maven Central or our repository. 
+       Remember, it's easy to add third party jars to our repository.
+  -->
+  <repositories>
+      <repository>
+          <id>cytoscape_snapshots</id>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+          <releases>
+            <enabled>false</enabled>
+          </releases>
+          <name>Cytoscape Snapshots</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
+       </repository>
+       <repository>
+          <id>cytoscape_releases</id>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <name>Cytoscape Releases</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
+       </repository>
+       <repository>
+          <id>cytoscape_thirdparty</id>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <name>Cytoscape Third Party</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/thirdparty/</url>
+       </repository>
+  </repositories>
+
+
 
   <dependencies>
     <dependency>
