--- a/cytoscape/trunk/distribution/pom.xml
+++ b/cytoscape/trunk/distribution/pom.xml
@@ -135,6 +135,18 @@
       <version>2.8.0-SNAPSHOT</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
+    <dependency>
+      <groupId>cytoscape.coreplugins</groupId>
+      <artifactId>quickfind</artifactId>
+      <version>2.8.0-SNAPSHOT</version>
+      <classifier>jar-with-dependencies</classifier>
+    </dependency>
+    <dependency>
+      <groupId>cytoscape.coreplugins</groupId>
+      <artifactId>filters</artifactId>
+      <version>2.8.0-SNAPSHOT</version>
+      <classifier>jar-with-dependencies</classifier>
+    </dependency>
   </dependencies>
 
 </project>
