--- a/core3/vizmap-gui-impl/trunk/pom.xml
+++ b/core3/vizmap-gui-impl/trunk/pom.xml
@@ -55,7 +55,7 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>1.4.3</version>
+				<version>${maven-bundle-plugin.version}</version>
 				<!--
 					| the following instructions build a simple set of public/private
 					classes into an OSGi bundle
@@ -81,40 +81,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>viewmodel-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.cytoscape</groupId>
-			<artifactId>vizmap-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.cytoscape</groupId>
 			<artifactId>default-mappings</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-		<dependency>
-			<groupId>org.cytoscape</groupId>
-			<artifactId>session-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>cytoscape</groupId>
 			<artifactId>application</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
-		<!-- Wrapped libraries -->
+		<!-- Wrapped 3rd party libraries -->
 		<dependency>
 			<groupId>org.cytoscape.wrappers</groupId>
 			<artifactId>com.l2fprod.common.sheet</artifactId>
 			<version>7.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.cytoscape.wrappers</groupId>
-			<artifactId>org.swinglabs.swingx</artifactId>
-			<version>0.9.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape.wrappers</groupId>
@@ -128,10 +109,10 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring</artifactId>
-			<version>2.5.6</version>
-			<scope>provided</scope>
+			<groupId>org.cytoscape.wrappers</groupId>
+			<artifactId>org.swinglabs.swingx</artifactId>
+			<version>0.9.7</version>
+			<type>bundle</type>
 		</dependency>
 	</dependencies>
 </project>
