--- a/core3/default-mappingcalculators/trunk/pom.xml
+++ b/core3/default-mappingcalculators/trunk/pom.xml
@@ -51,7 +51,7 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>1.4.3</version>
+				<version>${maven-bundle-plugin.version}</version>
 				<!-- | the following instructions build a simple set of public/private 
 					classes into an OSGi bundle -->
 				<configuration>
@@ -103,7 +103,6 @@
 			<artifactId>vizmap-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
