added distribution management
git-svn-id: http://chianti.ucsd.edu/svn@21193 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/coreplugins/trunk/pom.xml
+++ b/coreplugins/trunk/pom.xml
@@ -118,7 +118,18 @@
        </repository>
   </repositories>
 
-
+  <distributionManagement>
+    <repository>
+      <id>releases</id>
+      <name>Internal Releases</name>
+      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>snapshots</id>
+      <name>Internal Snapshots</name>
+      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 
   <dependencies>
     <dependency>
