trying something for hudson to build correctly
git-svn-id: http://chianti.ucsd.edu/svn@21195 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/application/pom.xml
+++ b/cytoscape/trunk/application/pom.xml
@@ -41,6 +41,7 @@
           <configuration>
             <argLine>-Xmx256m</argLine>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
+            <useSystemClassLoader>true</useSystemClassLoader>
           </configuration>
         </plugin>
         <plugin>
@@ -329,7 +330,7 @@
       <version>${corelibs.version}</version>
     </dependency>
 
-        <!-- swingx -->	
+        <!-- swingx -->
         <dependency>
             <groupId>org.cytoscape.wrappers</groupId>
             <artifactId>com.l2fprod.common.sheet</artifactId>
