Dependency section fixed.
git-svn-id: http://chianti.ucsd.edu/svn@21209 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/ding-presentation-impl/trunk/pom.xml
+++ b/core3/ding-presentation-impl/trunk/pom.xml
@@ -143,6 +143,11 @@
 			<artifactId>com.l2fprod.common.sheet</artifactId>
 			<version>7.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape.wrappers</groupId>
+			<artifactId>com.l2fprod.common.fontchooser</artifactId>
+			<version>7.3</version>
+		</dependency>
 	</dependencies>
 
 </project>
