git-svn-id: http://chianti.ucsd.edu/svn@21224 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
+++ b/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
@@ -14,7 +14,7 @@ edgeAppearanceCalculator.PanGIA\ Module\ Style.defaultEdgeLabelPosition=C,C,c,0,
 edgeAppearanceCalculator.PanGIA\ Module\ Style.defaultEdgeLabelWidth=100.0
 edgeAppearanceCalculator.PanGIA\ Module\ Style.defaultEdgeLineStyle=SOLID
 edgeAppearanceCalculator.PanGIA\ Module\ Style.defaultEdgeLineWidth=10.0
-edgeAppearanceCalculator.PanGIA\ Module\ Style.defaultEdgeOpacity=120.0
+edgeAppearanceCalculator.PanGIA\ Module\ Style.defaultEdgeOpacity=160.0
 edgeAppearanceCalculator.PanGIA\ Module\ Style.defaultEdgeSourceArrowColor=0,0,0
 edgeAppearanceCalculator.PanGIA\ Module\ Style.defaultEdgeSourceArrowOpacity=255.0
 edgeAppearanceCalculator.PanGIA\ Module\ Style.defaultEdgeSourceArrowShape=NONE
@@ -30,17 +30,17 @@ edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeFont=SanSerif,plain,
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeFontSize=5.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabel=
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelColor=50,50,255
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelOpacity=70.0
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelOpacity=100.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelPosition=C,C,c,0,0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelWidth=100.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLineStyle=SOLID
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLineWidth=3.0
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeOpacity=150.0
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeOpacity=160.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowColor=0,0,0
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowOpacity=120.0
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowOpacity=150.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowShape=NONE
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowColor=0,0,0
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowOpacity=120.0
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowOpacity=150.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowShape=NONE
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeToolTip=
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.edgeLineWidthCalculator=Complex Overview Style-EdgeWidthMapping
@@ -102,6 +102,7 @@ edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controlle
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controllerType=-1
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Genetic=0,0,204
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physical=51,51,51
+edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physical&Genetic=0,153,51
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.genetic=255,0,51
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.physical=51,255,51
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.type=DiscreteMapping
@@ -208,6 +209,7 @@ edgeLineStyleCalculator.InteractionType.mapping.type=DiscreteMapping
 edgeLineStyleCalculator.InteractionType.visualPropertyType=EDGE_LINE_STYLE
 edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.controller=PanGIA.Interaction Type
 edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.controllerType=-1
+edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.map.Physical&Genetic=SOLID
 edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.map.Genetic=LONG_DASH
 edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.map.Physical=SOLID
 edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.type=DiscreteMapping
