--- a/cytoscape/trunk/distribution/pom.xml
+++ b/cytoscape/trunk/distribution/pom.xml
@@ -24,6 +24,48 @@
     </plugins>
   </build>
 
+  <!-- 
+       Don't add additional repositories!  
+       We want everything coming from either Maven Central or our repository. 
+       Remember, it's easy to add third party jars to our repository.
+  -->
+  <repositories>
+      <repository>
+          <id>cytoscape_snapshots</id>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+          <releases>
+            <enabled>false</enabled>
+          </releases>
+          <name>Cytoscape Snapshots</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
+       </repository>
+       <repository>
+          <id>cytoscape_releases</id>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <name>Cytoscape Releases</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
+       </repository>
+       <repository>
+          <id>cytoscape_thirdparty</id>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <name>Cytoscape Third Party</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/thirdparty/</url>
+       </repository>
+  </repositories>
+
+
   <dependencies>
   	<!-- the application -->
     <dependency>
