--- a/core3/plugin-impl/trunk/pom.xml
+++ b/core3/plugin-impl/trunk/pom.xml
@@ -119,6 +119,11 @@
     <!-- dependencies needed for CyPluginAdapter -->	
     <dependency>
       <groupId>org.cytoscape</groupId>
+      <artifactId>event-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.cytoscape</groupId>
       <artifactId>model-api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
