--- a/core3/model-api/trunk/pom.xml
+++ b/core3/model-api/trunk/pom.xml
@@ -89,6 +89,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.cytoscape</groupId>
+      <artifactId>event-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
