--- a/core3/test-support/trunk/pom.xml
+++ b/core3/test-support/trunk/pom.xml
@@ -46,9 +46,13 @@
       <artifactId>model-api</artifactId>
       <version>1.0-SNAPSHOT</version>
       <type>test-jar</type>
-      <scope>test</scope>
     </dependency>
 	<!-- the APIs we're supporting - these should remain relatively static -->
+    <dependency>
+      <groupId>org.cytoscape</groupId>
+      <artifactId>event-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>model-api</artifactId>
