--- a/cytoscape3/trunk/provision/pom.xml
+++ b/cytoscape3/trunk/provision/pom.xml
@@ -125,6 +125,16 @@
 		<!-- Cytoscape Core Bundles -->
 		<dependency>
 			<groupId>org.cytoscape</groupId>
+			<artifactId>event-impl</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>event-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
 			<artifactId>model-impl</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
