Dependency fixed.  This scope is required for provisioning.
git-svn-id: http://chianti.ucsd.edu/svn@21346 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/log-swing/trunk/pom.xml
+++ b/core3/log-swing/trunk/pom.xml
@@ -122,11 +122,13 @@
 			<groupId>org.ops4j.pax.logging</groupId>
 			<artifactId>pax-logging-api</artifactId>
 			<version>1.5.2</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.ops4j.pax.logging</groupId>
 			<artifactId>pax-logging-service</artifactId>
 			<version>1.5.2</version>
+			<scope>compile</scope>
 		</dependency>
 		
 		<!-- Modules for Testing -->
