--- a/core3/model-api/trunk/pom.xml
+++ b/core3/model-api/trunk/pom.xml
@@ -93,10 +93,11 @@
       <artifactId>event-api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
