--- a/core3/event-impl/trunk/pom.xml
+++ b/core3/event-impl/trunk/pom.xml
@@ -105,7 +105,7 @@
 			<groupId>org.cytoscape</groupId>
 			<artifactId>event-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
-			<scope>compile</scope>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- Testing -->
