git-svn-id: http://chianti.ucsd.edu/svn@21354 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/event-impl/trunk/pom.xml
+++ b/core3/event-impl/trunk/pom.xml
@@ -113,14 +113,14 @@
 			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
 			<version>4.2.0</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.compendium</artifactId>
 			<version>4.2.0</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
 
