Added logging support.
git-svn-id: http://chianti.ucsd.edu/svn@21386 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/work-api/trunk/pom.xml
+++ b/core3/work-api/trunk/pom.xml
@@ -112,5 +112,10 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.ops4j.pax.logging</groupId>
+      <artifactId>pax-logging-api</artifactId>
+      <version>1.5.2</version>
+</dependency>
   </dependencies>
 </project>
